ref2 specific comment 1: ideal gas model rather than gas model. Havent added a ref, not sure what he means.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -111,7 +111,7 @@ Acoustic detection, camera traps, marine, population monitoring, simulations, te
 
 Animal population density is one of the fundamental measures in ecology and conservation. The density of a population has important implications for a range of issues such as sensitivity to stochastic fluctuations \citep{richter1972extinction, wright1983stochastic} and risk of extinction \citep{purvis2000predicting}. Monitoring animal population changes in response to anthropogenic pressure is becoming increasingly important as humans rapidly modify habitats and change climates \citep{everatt2014trophic}. Sensor technology, such as camera traps \citep{karanth1995estimating, rowcliffe2008surveys} and acoustic detectors \citep{clark1995application, acevedo2006using, walters2012continental} are becoming widely used to monitor changes in animal populations \citep{rowcliffe2008surveys, kessel2014review, walters2013challenges}, as they are efficient, relativity cheap and non-invasive \citep{cutler1999using}, allowing for surveys over large areas and long periods. However, converting sampled count data into estimates of density is problematic as detectability of animals needs to be accounted for \citep{anderson2001need}.
 
-Existing methods for estimating animal density often require additional information that is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require an estimation of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. More recently, the development of the random encounter model (REM) (a modification of a gas model) has enabled animal densities to be estimated from unmarked individuals of a known speed, and with known sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (e.g., acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
+Existing methods for estimating animal density often require additional information that is often unavailable. For example, capture-mark-recapture methods \citep{karanth1995estimating, trolle2007camera, borchers2014continuous} require recognition of individuals, and distance methods \citep{harris2013applying} require an estimation of how far away individuals are from the sensor \citep{barlow2005estimates, marques2011estimating}. More recently, the development of the random encounter model (REM) (a modification of an ideal gas model) has enabled animal densities to be estimated from unmarked individuals of a known speed, and with known sensor detection parameters \citep{rowcliffe2008estimating}. The REM method has been successfully applied to estimate animal densities from camera trap surveys \citep{manzo2012estimation, zero2013monitoring}. However, extending the REM method to other types of sensors (e.g., acoustic detectors) is more problematic, because the original derivation assumes a relatively narrow sensor width (up to $\pi/2$ radians) and that the animal is equally detectable irrespective of its heading \citep{rowcliffe2008estimating}. 
 
 Whilst these restrictions are not problematic for most camera trap makes (e.g., Reconyx, Cuddeback), the REM cannot be used to estimate densities from camera traps with a wider sensor width (e.g. canopy monitoring with fish eye lenses, \citet{brusa2014increasing}). Additionally, the REM method is not useful in estimating densities from acoustic survey data as acoustic detector angles are often wider than $\pi/2$ radians.  Acoustic detectors are designed for a range of diverse tasks and environments \citep{kessel2014review}, which naturally leads to a wide range of sensor detection widths and detection distances. In addition to this, calls emitted by many animals are directional \citep{blumstein2011acoustic}, breaking the assumption of the REM method. 
 
