added dollars and backslashes to some pi commands.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -245,7 +245,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), the  accuracy was no
 
 \subsubsection*{Movement models}
 
-Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the accuracy or precision was affected by the amount of time spent stationary. The mean difference between the estimated and actual values was not significantly different from zero for each category of stationary time (0, 0.25, 0.5 and 0.75), at p \textless 0.05, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test) (Figure~\ref{f:Perch}). Altering the maximum change in direction in each step (0, pi/3, 2pi/3, and pi) did not affect the accuracy or precision of the four gREM submodels tested, at p \textless 0.05, corrected for multiple testing (Wilcoxon signed-rank test) (Figure~\ref{f:Tort}). 
+Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the accuracy or precision was affected by the amount of time spent stationary. The mean difference between the estimated and actual values was not significantly different from zero for each category of stationary time (0, 0.25, 0.5 and 0.75), at p \textless 0.05, corrected for multiple tests (all gREM sub models Wilcoxon signed-rank test) (Figure~\ref{f:Perch}). Altering the maximum change in direction in each step (0, $\pi/3$, $2\pi/3$, and $\pi$) did not affect the accuracy or precision of the four gREM submodels tested, at p \textless 0.05, corrected for multiple testing (Wilcoxon signed-rank test) (Figure~\ref{f:Tort}). 
 
 
 \begin{figure}[t]
