rev2 specific comment 18: changed as suggested.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -293,7 +293,7 @@ The gREM was both accurate and precise for all the movement models we tested (st
 \subsection*{Limitations}
 Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture mark recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests in \citet{rowcliffe2008estimating}. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
 
-Within the simulation we have assumed an equal density across the entire world, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation, average velocity was chosen based on a
+Within the simulation we have assumed an equal density across the study area, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation, average velocity was chosen based on a
 day range of $\SI{40}{\kilo\meter \per \day}$, the largest day range of terrestrial animals \citep{carbone2005far}. Other speed values should not alter the accuracy of the gREM, however, precision would be affected, all else being equal, since slower speeds produce fewer records. We also assume perfect knowledge of the average speed of an animal and size of the detection zone. All of which may lead to possible bias or a decrease in precision. 
 
 \subsection*{Implications for ecology and conservation}
