--- a/supplementary-material/supplementaryMaterial.tex
+++ b/supplementary-material/supplementaryMaterial.tex
@@ -234,8 +234,42 @@ These supplementary methods derive all the models used. For continuity, the gas 
 	\includegraphics[width=7cm]{../imgs/ResultStandardDeviation.pdf}
 	\caption{Simulation model results of the gREM precision given a range of sensor and signal widths, shown by the standard deviation of the error between the estimated and true densities. Standard deviations are shown from deep red to pink, representing high to low values between $0.483\times10^{-6}$ to $3.74\times10^{-6}$. 
         } 
-	\label{f:StandardDevaition}
+	\label{f:StandardDeviation}
 \end{figure}
+
+
+\clearpage
+\section{Supplementary Information: Simulation model results of the gREM precision  }
+\setcounter{figure}{0}    
+
+\begin{figure}[h!]
+	\includegraphics[width=7cm]{imgs/AverageModelBias_callerror.pdf}
+	\caption{Model sensitivity (for all gREM submodels) to error in call parameter ($\alpha$) estimates. Estimates are -10\% (red), -1\% (orange), accurate (yellow), +1\% (green) and +10\% (blue) of the true value. } 
+	\label{f:sensCallError}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\includegraphics[width=7cm]{imgs/AverageModelBias_cameraerror.pdf}
+	\caption{Model sensitivity (for all gREM submodels) to error in call parameter ($\theta$) estimates. Estimates are -10\% (red), -1\% (orange), accurate (yellow), +1\% (green) and +10\% (blue) of the true value. } 
+	\label{f:sensCallError}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\includegraphics[width=7cm]{imgs/AverageModelBias_radiuserror.pdf}
+	\caption{Model sensitivity (for all gREM submodels) to error in sensor radis parameter ($r$) estimates. Estimates are -10\% (red), -1\% (orange), accurate (yellow), +1\% (green) and +10\% (blue) of the true value. } 
+	\label{f:sensCallError}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\includegraphics[width=7cm]{imgs/AverageModelBias_speederror.pdf}
+	\caption{Model sensitivity (for all gREM submodels) to error in animal movement speed parameter ($v$) estimates. Estimates are -10\% (red), -1\% (orange), accurate (yellow), +1\% (green) and +10\% (blue) of the true value. } 
+	\label{f:sensCallError}
+\end{figure}
+
+
 
 
 
