--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -288,7 +288,7 @@ Based on our simulations, we believe that the gREM has the potential to produce 
 
 The precision of the gREM is greatly affected by the number of captures. The coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, considered to a very good level of precision \citep{thomas2012passive}. Many current studies do not reach this level of precision, with most studies reporting coefficient of variations greater than the 10\% level \citep{o2003crouching, proctor2010ecological, foster2012critique}. The length of surveys in the field will need to be adjusted so that enough data can be collected to reach this precision level. Populations of fast moving animals or populations with high densities will require less survey effort than those species that are slow moving or have populations with low densities. 
 
-The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks). It is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and we expect that the long duration of our simulations has obscured this. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. The accuracy of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
+The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks). It is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and we expect that the long duration of our simulations has obscured this. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
 
 In our simulations we have assumed perfect parameter estimates. However, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is system dependant. 
 
